--- a/HobbyProject-Backend/HobbyProject-Backend/appsettings.json
+++ b/HobbyProject-Backend/HobbyProject-Backend/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        },
+        "File": {
+            "Path": "Logs/myapp-log.txt",
+            "RollingInterval": "Day"
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
